--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,6 @@ Description: Line list simulator for use in testing methods and practicing outbr
 License: GPLv3.0 (see LICENSE)
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Suggests: 
+    testthat
