--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,9 +5,16 @@ Version: 0.1.0
 Author: Juliet R. C. Pulliam
 Maintainer: Juliet R. C. Pulliam <pulliam@sun.ac.za>
 Description: Line list simulator for use in testing methods and practicing outbreak analysis.
-License: GPLv3.0 (see LICENSE)
+License: GPL-3 (see LICENSE)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+Imports:
+    stats
 Suggests: 
+    epicontacts,
+    incidence,
+    knitr,
+    rmarkdown,
     testthat
+VignetteBuilder: knitr
