--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Juliet R. C. Pulliam
 Maintainer: Juliet R. C. Pulliam <pulliam@sun.ac.za>
 Description: Line list simulator for use in testing methods and practicing outbreak analysis.
-License: GPL-3 (see LICENSE)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
